@@ -17,6 +17,11 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 1 ICON "res/Icon_1.ico"
 
 //////////////////////////////////////////////////////////////////////////////
+// RT_MANIFEST
+
+1 24 "res/Manifest_1.manifest"
+
+//////////////////////////////////////////////////////////////////////////////
 // Languages
 
 #include "lang/en_US.rc"
